--- a/client/public/style.css
+++ b/client/public/style.css
@@ -11,6 +11,7 @@
     display:flex;
     align-items: center;
     justify-content: center;
+    background:#fafafa;
 }
 .container{
     width:800px;
