--- a/client/public/style.css
+++ b/client/public/style.css
@@ -27,6 +27,7 @@
     width:400px;
     min-height: 800px;
     display:flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -34,7 +35,7 @@
     width:350px;
     min-height: 100px;
     background: #fff;
-    padding:30px 20px;
+    padding:30px 30px;
     border:1px solid #dbdbdb;
 }
 .imageContainer{
@@ -57,6 +58,20 @@
     background:#0095f6;
 }
 .fbSignup p{
+    color:white;
+    font-size: 15px;
+    font-weight: bold;
+}
+
+.fbSignupDisable{
+    width:100%;
+    padding:0px 50px;
+    border-radius: 4px;
+    border:1px solid transparent;
+    background:#0095f6;
+    margin-top: 20px;
+}
+.fbSignupDisable p{
     color:white;
     font-size: 15px;
     font-weight: bold;
@@ -93,5 +108,37 @@
     padding:10px 0px;
     background:transparent;
     
+}
+
+.already{
+    width:350px;
+    height:80px;
+    display:flex;
+    flex-wrap:wrap;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    border:1px solid #dbdbdb;
+    margin-top: 20px;
+}
+
+.getApp{
+    width:350px;
+    min-height: 100px;
+}
+.getText{
+    width:100%;
+    text-align: center;
+}
+.getImages{
+    width:100%;
+    display:flex;
+    flex-wrap:wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+.getPics{
+    width:150px;
+    height:auto;
 }
 
